--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
 
     <div class="particulas"></div>
 
-    <nav class="navegacao">
-        <ul class="menu">
+    <nav class="navegacao" id="site-nav">
+        <button class="nav-toggle" id="nav-toggle" aria-label="Abrir menu" aria-expanded="false">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
+        <ul class="menu" id="menu">
             <li>
                 <a href="#inicio" class="menu-link">Início</a>
             </li>
@@ -36,7 +41,7 @@
     <man id="inicio" class="cabecalho">
         <img src="./img/foto-perfil.png" alt="foto de Valmir Silva" class="foto-perfil">
         <h1>Valmir Virginio da Silva</h1>
-        <p class="cabecalho-sub-titulo">Desenvolvedor Front End</p>
+        <p class="cabecalho-sub-titulo">Desenvolvedor Full Stack Júnior</p>
 
         <div>            
             <a class="github" href="https://github.com/vvalmir-silva" target="_blank" class="botao">Meu GitHub</a>
@@ -47,11 +52,11 @@
         <h2 class="sobre-titulo">Sobre mim</h2>
         <div class="sobre-caixa">
             <p class="sobre-paragrafo">
-                OLá, meu nome é Valmir Silva,sou desenvolvedor front-end com foco em criar aplicações intuitivas, responsivas e centradas na experiência do usuário,
+                Olá, meu nome é Valmir Silva, sou desenvolvedor full stack com foco em criar aplicações intuitivas, responsivas e centradas na experiência do usuário,
                 alinhando soluções tecnológicas às necessidades das áreas de negócio.
                 Sou dedicado a transformar requisitos em soluções visuais modernas e eficientes, com experiência em tecnologias modernas e por entregar interfaces de qualidade.
                 Tenho experiência em diversas tecnologias, como, HTML, CSS, JavaScript, tailwindcss, ReactJS, API
-                Restful, PL SQL, mantenho foco em soluções inovadoras e de alto desempenho.
+                Restful, PSQL, mantenho foco em soluções inovadoras e de alto desempenho.
                 Colaborando com equipes multidisciplinares para impactar positivamente os serviços prestados.
             </p>
         </div>
@@ -155,10 +160,16 @@
 
             <div class="grupo-form">
                 <input placeholder="Nome" class="campo-form" id="nome">
+                <div class="error-msg" id="nome-error" aria-live="polite"></div>
             </div>
 
             <div class="grupo-form">
+                <div class="grupo-form">
+                    <input placeholder="Telefone" class="campo-form" id="telefone" type="tel">
+                    <div class="error-msg" id="telefone-error" aria-live="polite"></div>
+                </div>
                 <textarea class="campo-form" placeholder="Digite sua Mensagem" rows="5" id="mensagem"></textarea>
+                <div class="error-msg" id="mensagem-error" aria-live="polite"></div>
             </div>
             <button type="submit" class="botao-form"> Enviar via WhatsApp</button>
         </form>
